welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:10: error: illegal start of simple expression
  if (A >= 3):
             ^